--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
             <img src="pato_logo.webp" class="logo_img">
             <ul>
                 <li>Home</li>
-                <li>Manuu</li>
+                <li>Menu</li>
                 <li>About</li>
                 <li>Gallary</li>
                 <li>Bolg</li>
@@ -368,7 +368,7 @@
             <div class="contant">
                 <h1 class="wel">Welcome to</h1>
                 <h2>PATO PLACE</h2>
-                <button class="btn">Look Manu</button>
+                <button class="btn">Look Menu</button>
             </div>
         </div>
       </div>
